--- a/component/build.gradle
+++ b/component/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.1.0'
     //xr内存溢出
-    implementation 'com.trello.rxlifecycle2:rxlifecycle-components:2.2.1'
+    api 'com.trello.rxlifecycle2:rxlifecycle-components:2.2.1'
     //net work
     api 'com.squareup.retrofit2:retrofit:2.3.0'
     api 'com.squareup.retrofit2:converter-gson:2.3.0'
@@ -41,16 +41,16 @@ dependencies {
     //Keyboard监听事件
     api 'net.yslibrary.keyboardvisibilityevent:keyboardvisibilityevent:2.1.0'
 
-    implementation 'com.android.support:recyclerview-v7:27.1.0'
+    api 'com.android.support:recyclerview-v7:27.1.0'
 
-    implementation 'com.github.the-pig-of-jungle.smart-show:toast:2.7.6'
-    implementation 'com.github.the-pig-of-jungle.smart-show:core:2.7.6'
+    api 'com.github.the-pig-of-jungle.smart-show:toast:2.7.6'
+    api 'com.github.the-pig-of-jungle.smart-show:core:2.7.6'
 
-    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    api 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
-    implementation 'com.github.bumptech.glide:okhttp3-integration:4.8.0'
-    implementation 'jp.wasabeef:glide-transformations:3.3.0'
-    implementation 'com.zlc.glide:webpdecoder:1.3.4.8.0'
+    api 'com.github.bumptech.glide:okhttp3-integration:4.8.0'
+    api 'jp.wasabeef:glide-transformations:3.3.0'
+    api 'com.zlc.glide:webpdecoder:1.3.4.8.0'
 
     api 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-12'
 
